--- a/client/src/components/Favorites/style.css
+++ b/client/src/components/Favorites/style.css
@@ -3,11 +3,13 @@
     border-width: 0.5px;
     margin-bottom: 2%;
     padding: 2%;
+    height: auto;
 }
 
 img {
     float: left;
-    margin: 2%
+    margin: 2%;
+    max-height: 100%;
 }
 
 .book-buttons {
