--- a/client/src/components/Results/style.css
+++ b/client/src/components/Results/style.css
@@ -3,11 +3,14 @@
     border-width: 0.5px;
     margin-bottom: 2%;
     padding: 2%;
+    height: 490px;
 }
 
-img {
+.book-image {
     float: left;
-    margin: 2%
+    margin: 2%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .book-buttons {
