--- a/client/src/components/Results/style.css
+++ b/client/src/components/Results/style.css
@@ -1,3 +1,5 @@
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
+
 .results-div {
     border-style: solid;
     border-width: 0.5px;
