--- a/client/src/components/Favorites/style.css
+++ b/client/src/components/Favorites/style.css
@@ -1,4 +1,7 @@
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
+
 .results-div {
+    display: inline-block;
     border-style: solid;
     border-width: 0.5px;
     margin-bottom: 2%;
