--- a/client/src/components/Results/style.css
+++ b/client/src/components/Results/style.css
@@ -1,11 +1,12 @@
 @import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
 
 .results-div {
+    display: inline-block;
     border-style: solid;
     border-width: 0.5px;
     margin-bottom: 2%;
     padding: 2%;
-    height: 490px;
+    height: auto;
 }
 
 .book-image {
